ntpd/iptables.rules
*filter
# Policies
:INPUT DROP
:FORWARD DROP
:OUTPUT ACCEPT
# All local traffic is accepted.
-A INPUT -i lo -j ACCEPT
# Only handle inputs to the main interface.
-N eth0
-A INPUT -i eth0 -j eth0
# Accept incoming connections established by outgoing traffic.
-A eth0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
# ---- Trust Zone ---- #
# Everything from 192.168.1-3.x
-N trust
-A eth0 -s 192.168.1.0/24 -j trust
-A eth0 -s 192.168.2.0/24 -j trust
-A eth0 -s 192.168.3.0/24 -j trust
# Ping
-A trust -p icmp -j ACCEPT
# NTP
-A trust -p udp --dport 123 -j ACCEPT
# ---- Guest Zone ---- #
# Everything in 192.168.4.x
-N guest
-A eth0 -s 192.168.4.0/24 -j guest
COMMIT
